# src/main/java/org/traccar/model/Drawing.java
@@ -1,0 +1,99 @@
+/*
+ * Copyright 2026 Anton Tananaev (anton@traccar.org)
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.traccar.model;
+
+import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.databind.JsonNode;
+import org.traccar.storage.QueryIgnore;
+import org.traccar.storage.StorageName;
+
+@StorageName("tc_drawings")
+public class Drawing extends BaseModel {
+
+    private long ownerId;
+
+    public long getOwnerId() {
+        return ownerId;
+    }
+
+    public void setOwnerId(long ownerId) {
+        this.ownerId = ownerId;
+    }
+
+    private Long sessionDeviceId;
+
+    @JsonIgnore
+    public Long getSessionDeviceId() {
+        return sessionDeviceId;
+    }
+
+    public void setSessionDeviceId(Long sessionDeviceId) {
+        this.sessionDeviceId = sessionDeviceId;
+    }
+
+    private String type;
+
+    public String getType() {
+        return type;
+    }
+
+    public void setType(String type) {
+        this.type = type;
+    }
+
+    private JsonNode geometry;
+
+    public JsonNode getGeometry() {
+        return geometry;
+    }
+
+    public void setGeometry(JsonNode geometry) {
+        this.geometry = geometry;
+    }
+
+    private String color;
+
+    public String getColor() {
+        return color;
+    }
+
+    public void setColor(String color) {
+        this.color = color;
+    }
+
+    private String text;
+
+    public String getText() {
+        return text;
+    }
+
+    public void setText(String text) {
+        this.text = text;
+    }
+
+    private String ownerName;
+
+    @QueryIgnore
+    public String getOwnerName() {
+        return ownerName;
+    }
+
+    @QueryIgnore
+    public void setOwnerName(String ownerName) {
+        this.ownerName = ownerName;
+    }
+
+}
